--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,6 +1,5 @@
 page-login {
     $transparent-white: rgba(255, 255, 255, .6);
-}
 
 .toolbar-content, span {
     color: #fff;
@@ -22,22 +21,60 @@ ion-footer {
 }
 
 ion-content {
-    background: lienar-gradient(316deg, #2b1de8, #dd00f3, #dd00f3);
+    background: linear-gradient(316deg, #2b1de8, #dd00f3, #dd00f3);
     background-size: 1800% 1800%;
     animation: rainbow 30s linear infinite;
-}
-
-@keyframes rainbow {
+  }
+  @keyframes rainbow {
     0% {
-        background-position: 0% 0%;
+      background-position: 0% 0%
     }
     50% {
-        background-position: 100% 100%;
+      background-position: 100% 100%
     }
     100% {
-        background-position: 0% 0%
+      background-position: 0% 0%
     }
+  }
+  // Content
+  .scroll-content {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+  }
+  .logo {
+    width: 50%;
+    height: auto;
+    margin: 0 auto;
+    padding-top: 50px;
+  }
+  // Input items
+  ion-item {
+    border-radius: 3px !important;
+    padding-left: 10px !important;
+    margin-bottom: 15px !important;
+    margin-bottom: 10px;
+    color: #fff !important;
+    background-color: rgba(255, 255, 255, .2) !important;
+    font-size: 0.9em;
+  }
+   ::-webkit-input-placeholder {
+    color: white !important;
+  }
+  .item-inner {
+    border-bottom: 0 !important;
+    box-shadow: none !important;
+  }
+  // --
+  .login-button {
+    text-transform: none;
+    border-radius: 3px !important;
+  }
+  // Facebook icon
+  ion-icon {
+    padding-right: 10px;
+    font-size: 2.2rem;
+  }
 }
 
 //Content
-
