--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,57 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+@keyframes heartbeat {
+    0% {
+        transform: scale( .75 );
+    }
+    20% {
+        transform: scale ( 1 );
+    }
+    40% {
+        transform: scale ( .75 );
+    }
+    60% {
+        transform: scale ( 1 );
+    }
+    80% {
+        transform: scale ( .75);
+    }
+    100% {
+        transform: scale( .95 );
+    }
+}
+
+
+.like-btn:active {
+    animation: heartbeat 1s linear;
+}
+
+a {
+    text-decoration: none;
+    color: #003581;
+}
+
+.grid_img {
+    margin-bottom: 5px;
+}
+
+.grid_img  img {
+    filter: brightness(100%);
+}
+
+// CARD CONTENT
+.card {
+    width: 100vw !important;
+}
+
+.like-content {
+    font-weight: bold;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.icon-space {
+    padding-top: 3px;
+    padding-left: 10px;
+}
