--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,21 @@
 page-home {
+    $grid-padding-width: 1px !default;
 
+    ion-title {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 0 90px 1px;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+    }
+
+    .col-more-button {
+        padding: initial;
+    }
+
+    .item-card-user {
+        padding-left: 0!important;
+    }
 }
