--- a/src/pages/edit-profile/edit-profile.scss
+++ b/src/pages/edit-profile/edit-profile.scss
@@ -1,3 +1,11 @@
 page-edit-profile {
+    .edit-avatar {
+        border-radius: 100%;
+        width: 25%;
+    }
 
+    .change-text {
+        font-size: 13px;
+        color: #659CF2;
+    }
 }
